# isamples_frictionless

./: README.md  isamples_frictionless.py  pyproject.toml
isamples_frictionless/: __init__.py
tests/: test_isamples_frictionless.py
