[tool.poetry]
name = "isamples_frictionless"
version = "0.1.2"
description = ""
authors = ["Danny Mandel <danny.mandel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
frictionless = "4.40.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"