[tool.poetry]
name = "isamples_frictionless"
version = "0.1.4"
description = "iSamples integration with frictionless.io"
authors = ["Danny Mandel <danny.mandel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
frictionless = {version="4.40.8", extras=["excel"]}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"